# music

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
docs/: architecture.md
docs/plans/: 2026-07-20-layout-fix-design.md  2026-07-20-reference-ui-redesign.md
src/: lib.rs  lrc.rs  main.rs  player.rs  playlist.rs  tray.rs  ui.rs  utils.rs
web/: index.html
