[package]
name = "SoundCargo"
version = "0.1.0"
edition = "2024"
description = "A cross-platform MP3 player with synchronized LRC lyrics"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
directories = "6.0"
eframe = { version = "0.35.0", features = ["glow"] }
egui = "0.35.0"
id3 = "1.17.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rand = "0.9"
rfd = "0.15"
rodio = { version = "0.22.2", features = ["symphonia-mp3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = { version = "0.6.0", features = ["mp3"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tray-icon = "0.24.1"
walkdir = "2.5"

[profile.release]
lto = "thin"
strip = true
